# hostingDiplom

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_REALTIME.md  README.md  setup.sh
.kiro/steering/: backend-standards.md  frontend-standards.md  monorepo-standards.md
backend/: README.md
backend/auth-service/: .env.example  Dockerfile  pyproject.toml
backend/billing-service/: .env.example  pyproject.toml
backend/deploy-service/: .env.example  pyproject.toml
backend/domain-service/: .env.example  Dockerfile  pyproject.toml
backend/gateway-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/observability-service/: .env.example  pyproject.toml
backend/project-service/: .env.example  pyproject.toml
backend/tldraw-sync-service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/tldraw-sync-service/src/: __init__.py  main.py
backend/tldraw-sync-service/src/api/: __init__.py  router.py  sync.py
backend/tldraw-sync-service/src/core/: __init__.py  config.py
backend/user-service/: .env.example  pyproject.toml
docs/: database-er.md  deploy-kostricyn.ru.md  diploma-defense-part1-frontend.md  diploma-defense.md  local-development.md  onec-file-import.md
docs/architecture/: api-contracts.md  deploy-flow.md  kubernetes-phase.md  overview.md  production-readiness.md
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: app.vue
infrastructure/: README.md
infrastructure/docker/: .env.example  README.md  docker-compose.host-nginx.yml  docker-compose.prod.yml  (+2 more)
(+238 files in other folders)
